# elkodon

./: .cirrus.yml  ANNOUNCEMENT.md  BEST_PRACTICES.md  CHANGELOG.md  Cargo.toml  FAQ.md  README.md  ROADMAP.md  Roadmap.md  todo.md
benchmarks/publish_subscribe/: Cargo.toml
benchmarks/publish_subscribe/src/: main.rs
elkodon/: Cargo.toml
elkodon/src/: compiletests.rs  config.rs  elk.rs  global_config.rs  lib.rs  message.rs  prelude.rs  raw_sample.rs  sample.rs  sample_mut.rs
elkodon/src/port/: event_id.rs  listener.rs  mod.rs  notifier.rs  port_identifiers.rs  publisher.rs  subscriber.rs
elkodon/src/port/details/: mod.rs  publisher_connections.rs  subscriber_connections.rs
elkodon/src/service/: config_scheme.rs  messaging_pattern.rs  mod.rs  naming_scheme.rs  process_local.rs  service_name.rs  zero_copy.rs
elkodon/tests/: publisher_tests.rs  service_event_tests.rs  service_publish_subscribe_tests.rs  service_tests.rs  subscriber_tests.rs
elkodon_bb/container/: Cargo.toml
elkodon_bb/container/src/: byte_string.rs  lib.rs  queue.rs  semantic_string.rs  vec.rs
elkodon_bb/container/tests/: byte_string_tests.rs  queue_tests.rs  semantic_string_tests.rs  vec_tests.rs
elkodon_bb/elementary/: Cargo.toml
elkodon_bb/elementary/src/: allocator.rs  enum_gen.rs  lazy_singleton.rs  lib.rs  math.rs  owning_pointer.rs  pointer_trait.rs  relocatable_container.rs  relocatable_ptr.rs  scope_guard.rs  unique_id.rs
elkodon_bb/elementary/tests/: math_tests.rs  relocatable_container_tests.rs  relocatable_ptr_tests.rs  scope_guard_tests.rs  unique_id_tests.rs
elkodon_bb/lock_free/: Cargo.toml
elkodon_bb/lock_free/src/: lib.rs
elkodon_bb/lock_free/tests/: mpmc_container_tests.rs  mpmc_unique_index_set_tests.rs  spmc_unrestricted_atomic_tests.rs  spsc_index_queue_tests.rs  spsc_queue_tests.rs  spsc_safely_overflowing_index_queue_tests.rs
elkodon_bb/log/: Cargo.toml
elkodon_bb/log/src/: fail.rs  lib.rs  log.rs
elkodon_bb/memory/: Cargo.toml
elkodon_bb/memory/src/: bump_allocator.rs  heap_allocator.rs  lib.rs  memory.rs  one_chunk_allocator.rs  pool_allocator.rs
elkodon_bb/memory/tests/: bump_allocator_tests.rs  heap_allocator_tests.rs  one_chunk_allocator_tests.rs  pool_allocator_tests.rs
elkodon_bb/posix/: Cargo.toml
elkodon_bb/posix/src/: access_control_list.rs  access_mode.rs  adaptive_wait.rs  barrier.rs  clock.rs  condition_variable.rs  config.rs  creation_mode.rs  directory.rs  file.rs  file_descriptor.rs  file_descriptor_set.rs  file_lock.rs  file_type.rs  group.rs  handle_errno.rs  lib.rs  memory.rs  memory_lock.rs  message_queue.rs  metadata.rs  mutex.rs  ownership.rs  permission.rs  process.rs  read_write_mutex.rs  scheduler.rs  semaphore.rs  shared_memory.rs  signal.rs  socket_ancillary.rs  system_configuration.rs  thread.rs  udp_socket.rs  unique_system_id.rs  unix_datagram_socket.rs  unmovable_ipc_handle.rs  user.rs
elkodon_bb/posix/tests/: access_control_list_tests.rs  access_mode_tests.rs  adaptive_wait_tests.rs  barrier_tests.rs  clock_tests.rs  condition_variable_tests.rs  creation_mode_tests.rs  directory_tests.rs  file_descriptor_set_tests.rs  file_descriptor_tests.rs  file_lock_tests.rs  file_tests.rs  file_type_tests.rs  group_tests.rs  memory_lock_tests.rs  memory_tests.rs  message_queue_tests.rs  metadata_tests.rs  mutex_tests.rs  ownership_tests.rs  permission_tests.rs  process_tests.rs  read_write_mutex_tests.rs  scheduler_tests.rs  semaphore_tests.rs  shared_memory_tests.rs  signal_tests.rs  socket_ancillary_tests.rs  thread_tests.rs  udp_socket_tests.rs  unique_system_id_tests.rs  unix_datagram_socket_tests.rs  users_tests.rs
elkodon_bb/system_types/: Cargo.toml
elkodon_bb/system_types/src/: file_name.rs  file_path.rs  group_name.rs  ipv4_address.rs  lib.rs  path.rs  port.rs  user_name.rs
elkodon_bb/system_types/tests/: file_name_tests.rs  file_path_tests.rs  group_name_tests.rs  ipv4_address_tests.rs  path_tests.rs  port_tests.rs  user_name_tests.rs
elkodon_bb/threadsafe/: Cargo.toml
elkodon_bb/threadsafe/src/: lib.rs  trigger_queue.rs
elkodon_bb/threadsafe/tests/: trigger_queue_tests.rs
elkodon_cal/: Cargo.toml
elkodon_cal/src/: lib.rs  named_concept.rs
elkodon_cal/src/communication_channel/: message_queue.rs  mod.rs  posix_shared_memory.rs  process_local.rs  unix_datagram.rs
elkodon_cal/src/dynamic_storage/: mod.rs  posix_shared_memory.rs  process_local.rs
elkodon_cal/src/event/: mod.rs  process_local.rs  unix_datagram_socket.rs
elkodon_cal/src/hash/: mod.rs  sha1.rs  sliced_sha1.rs
elkodon_cal/src/reactor/: mod.rs  posix_select.rs
elkodon_cal/src/serialize/: cdr.rs  mod.rs  toml.rs
elkodon_cal/src/shared_memory/: mod.rs  posix.rs  process_local.rs
elkodon_cal/src/shared_memory_directory/: decision_counter.rs  file.rs  file_reference_set.rs  mod.rs  reference_counter.rs
elkodon_cal/src/shm_allocator/: bump_allocator.rs  mod.rs  pool_allocator.rs
elkodon_cal/src/static_storage/: file.rs  mod.rs  process_local.rs
elkodon_cal/src/zero_copy_connection/: mod.rs  posix_shared_memory.rs  process_local.rs
elkodon_cal/tests/: communication_channel_trait_tests.rs  dynamic_storage_trait_tests.rs  event_tests.rs  reactor_tests.rs  serialize_trait_tests.rs  shared_memory_directory_tests.rs  shared_memory_trait_tests.rs  shm_allocator_trait_tests.rs  static_storage_file_tests.rs  static_storage_trait_tests.rs  zero_copy_connection_trait_tests.rs
elkodon_pal/concurrency_primitives/: Cargo.toml
elkodon_pal/concurrency_primitives/src/: barrier.rs  condition_variable.rs  lib.rs  mutex.rs  rwlock.rs  semaphore.rs
elkodon_pal/concurrency_primitives/tests/: barrier_tests.rs  condition_variable_tests.rs  mutex_tests.rs  rwlock_tests.rs  semaphore_tests.rs
elkodon_pal/posix/: Cargo.toml  build.rs
elkodon_pal/posix/src/: lib.rs
elkodon_pal/posix/tests/: win32_security_attributes_tests.rs  win32_select_tests.rs
examples/discovery/: Cargo.toml
examples/event/: Cargo.toml
examples/publish_subscribe/: Cargo.toml
examples/publish_subscribe/src/: publisher.rs  subscriber.rs  transmission_data.rs
(+157 files in other folders)
