[package]
name = "elkodon"
description = "Elkodon: Lock-Free Zero-Copy Interprocess Communication"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[features]
# Enables https://crates.io/crates/log as default logger
logger_log = []
# Enables https://crates.io/crates/tracing as default logger
logger_tracing = []

[dependencies]
elkodon_bb_container = { workspace = true }
elkodon_bb_system_types = { workspace = true }
elkodon_bb_lock_free = { workspace = true }
elkodon_bb_log = { workspace = true }
elkodon_bb_memory = { workspace = true }
elkodon_bb_posix = { workspace = true }
elkodon_bb_elementary = { workspace = true }
elkodon_cal = { workspace = true }

lazy_static = { workspace = true }
serde = { workspace = true }
cdr = { workspace = true }
toml = { workspace = true }
sha1_smol = { workspace = true }
tiny-fn = { workspace = true }

[dev-dependencies]
elkodon_bb_testing = { workspace = true }
generic-tests = { workspace = true }
