[package]
name = "elkodon_cal"
description = "Elkodon: high-level traits and implementations that represents OS primitives in an exchangeable fashion"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_posix = { path = "../elkodon_bb/posix/" }
elkodon_bb_container = { path = "../elkodon_bb/container/" }
elkodon_bb_system_types = { path = "../elkodon_bb/system_types/" }
elkodon_bb_log = { path = "../elkodon_bb/log/" }
elkodon_bb_elementary = { path = "../elkodon_bb/elementary/" }
elkodon_bb_memory = { path = "../elkodon_bb/memory/" }
elkodon_bb_lock_free = { path = "../elkodon_bb/lock_free/" }
elkodon_bb_threadsafe = { path = "../elkodon_bb/threadsafe/" }
elkodon_bb_testing = { path = "../elkodon_bb/testing/" }

generic-tests = { version = "0.1.2" }
once_cell = { version = "1.16.0" }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0.139", features = ["derive"] }
cdr = { version = "0.2.4" }
toml = { version = "0.5.9" }
sha1_smol = { version = "1.0.0" }
tiny-fn = { version = "0.1.5" }
ouroboros = { version = "0.17.2" }

[dev-dependencies]
elkodon_pal_posix = { path = "../elkodon_pal/posix/" }
