[package]
name = "elkodon_cal"
description = "Elkodon: high-level traits and implementations that represents OS primitives in an exchangeable fashion"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_posix = { workspace = true }
elkodon_bb_container = { workspace = true }
elkodon_bb_system_types = { workspace = true }
elkodon_bb_log = { workspace = true }
elkodon_bb_elementary = { workspace = true }
elkodon_bb_memory = { workspace = true }
elkodon_bb_lock_free = { workspace = true }
elkodon_bb_threadsafe = { workspace = true }
elkodon_bb_testing = { workspace = true }

once_cell = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
cdr = { workspace = true }
toml = { workspace = true }
sha1_smol = { workspace = true }
tiny-fn = { workspace = true }
ouroboros = { workspace = true }

[dev-dependencies]
elkodon_pal_posix = { workspace = true }
generic-tests = { workspace = true }
