[package]
name = "elkodon_bb_container"
description = "Elkodon: IPC shared memory compatible containers"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elkodon_bb_elementary = { path = "../elementary/" }
elkodon_bb_log = { path = "../log/" }

[dev-dependencies]
pin-init = { version = "0.2.0" }
generic-tests = { version = "0.1.2" }
elkodon_bb_memory = { path = "../memory/" }
elkodon_bb_system_types = { path = "../system_types/" }
elkodon_bb_testing = { path = "../testing/" }
