[package]
name = "elkodon_bb_container"
description = "Elkodon: IPC shared memory compatible containers"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elkodon_bb_elementary = { workspace = true }
elkodon_bb_log = { workspace = true }

[dev-dependencies]
pin-init = { workspace = true }
generic-tests = { workspace = true }
elkodon_bb_memory = { workspace = true }
elkodon_bb_system_types = { workspace = true }
elkodon_bb_testing = { workspace = true }
