[package]
name = "elkodon_bb_elementary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
elkodon_bb_container = { path = "../container/" }
elkodon_bb_memory = { path = "../memory/" }
elkodon_bb_lock_free = { path = "../lock_free/" }
elkodon_bb_testing = { path = "../testing/" }

generic-tests = { version = "0.1.2" }
pin-init = { version = "0.2.0" }

