[package]
name = "elkodon_bb_elementary"
description = "Elkodon: elementary constructs that have no dependencies at all"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
elkodon_bb_container = { path = "../container/" }
elkodon_bb_memory = { path = "../memory/" }
elkodon_bb_lock_free = { path = "../lock_free/" }
elkodon_bb_testing = { path = "../testing/" }

generic-tests = { version = "0.1.2" }
pin-init = { version = "0.2.0" }

