[package]
name = "elkodon_bb_elementary"
description = "Elkodon: elementary constructs that have no dependencies at all"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
elkodon_bb_container = { workspace = true }
elkodon_bb_memory = { workspace = true }
elkodon_bb_lock_free = { workspace = true }
elkodon_bb_testing = { workspace = true }

generic-tests = { workspace = true }
pin-init = { workspace = true }

