[package]
name = "elkodon_bb_lock_free"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elkodon_bb_log = { path = "../log/" }
elkodon_bb_elementary = { path = "../elementary/" }

tiny-fn = { version = "0.1.5" }

[dev-dependencies]
elkodon_bb_posix = { path = "../posix/" }
elkodon_bb_memory = { path = "../memory/" }
elkodon_bb_testing = { path = "../testing/" }
pin-init = { version = "0.2.0" }
