[package]
name = "elkodon_bb_lock_free"
description = "Elkodon: lock-free containers and constructs"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_log = { path = "../log/" }
elkodon_bb_elementary = { path = "../elementary/" }

tiny-fn = { version = "0.1.5" }

[dev-dependencies]
elkodon_bb_posix = { path = "../posix/" }
elkodon_bb_memory = { path = "../memory/" }
elkodon_bb_testing = { path = "../testing/" }
pin-init = { version = "0.2.0" }
