[package]
name = "elkodon_bb_lock_free"
description = "Elkodon: lock-free containers and constructs"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_log = { workspace = true }
elkodon_bb_elementary = { workspace = true }

tiny-fn = { workspace = true }

[dev-dependencies]
elkodon_bb_posix = { workspace = true }
elkodon_bb_memory = { workspace = true }
elkodon_bb_testing = { workspace = true }
pin-init = { workspace = true }
generic-tests = { workspace = true }
