[package]
name = "elkodon_bb_memory"
description = "Elkodon: allocators and tools for memory management"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_lock_free = { workspace = true }
elkodon_bb_elementary = { workspace = true }
elkodon_bb_log = { workspace = true }
elkodon_bb_posix = { workspace = true }

tiny-fn = { workspace = true }
lazy_static = { workspace = true }
pin-init = { workspace = true }

[dev-dependencies]
elkodon_bb_testing = { workspace = true }
