[package]
name = "elkodon_bb_posix"
description = "Elkodon: high level safe abstractions for low level unsafe posix constructs"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_container = { workspace = true }
elkodon_bb_system_types = { workspace = true }
elkodon_bb_elementary = { workspace = true }
elkodon_bb_log = { workspace = true }
elkodon_pal_posix = { workspace = true }
elkodon_pal_settings = { workspace = true }

lazy_static = { workspace = true }
bitflags = { workspace = true }
enum-iterator = { workspace = true }
tiny-fn = { workspace = true }

[dev-dependencies]
elkodon_bb_testing = { workspace = true }
generic-tests = { workspace = true }
