[package]
name = "elkodon_bb_system_types"
description = "Elkodon: strong types that represents low level constructs like file, path, ip address, etc..."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_container = { path  = "../container/" }
elkodon_bb_log = { path  = "../log/" }
elkodon_pal_settings = { path = "../../elkodon_pal/settings/" }
serde = { version = "1.0.139", features = ["derive"] }

[dev-dependencies]
elkodon_bb_testing = { path = "../../elkodon_bb/testing/" }
