[package]
name = "elkodon_bb_system_types"
description = "Elkodon: strong types that represents low level constructs like file, path, ip address, etc..."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_container = { workspace = true }
elkodon_bb_log = { workspace = true }
elkodon_pal_settings = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
elkodon_bb_testing = { workspace = true }
