[package]
name = "elkodon_bb_threadsafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elkodon_bb_container = { path = "../container/" }
elkodon_bb_posix = { path = "../posix/" }
elkodon_bb_log = { path = "../log/" }

tiny-fn = { version = "0.1.5" }

[dev-dependencies]
elkodon_bb_testing = { path = "../testing/" }
elkodon_pal_posix = { path = "../../elkodon_pal/posix/" }
