[package]
name = "elkodon_bb_threadsafe"
description = "Elkodon: threadsafe non-lock-free containers and constructs"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_container = { path = "../container/" }
elkodon_bb_posix = { path = "../posix/" }
elkodon_bb_log = { path = "../log/" }

tiny-fn = { version = "0.1.5" }

[dev-dependencies]
elkodon_bb_testing = { path = "../testing/" }
elkodon_pal_posix = { path = "../../elkodon_pal/posix/" }
