[package]
name = "elkodon_bb_threadsafe"
description = "Elkodon: threadsafe non-lock-free containers and constructs"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
elkodon_bb_container = { workspace = true }
elkodon_bb_posix = { workspace = true }
elkodon_bb_log = { workspace = true }

[dev-dependencies]
elkodon_bb_testing = { workspace = true }
elkodon_pal_posix = { workspace = true }
