[package]
name = "elkodon_pal_concurrency_primitives"
description = "Elkodon: low-level basic building blocks to implement posix mutex, condition variables etc."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]

[dev-dependencies]
elkodon_bb_testing = { workspace = true }
