[package]
name = "elkodon_pal_posix"
description = "Elkodon: A posix layer that ensures uniform posix behavior on all platforms according to https://posix.opengroup.org"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[build-dependencies]
cc = { workspace = true }
bindgen = { workspace = true }

[dependencies]
elkodon_pal_concurrency_primitives = { workspace = true }
elkodon_pal_settings = { workspace = true }
lazy_static = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
elkodon_bb_testing = { workspace = true }
