[package]
name = "example_discovery"
description = "Elkodon: example that demonstrates service discovery"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "example_discovery_list_services"
path = "src/list_services.rs"

[dependencies]
elkodon = { workspace = true }
elkodon_bb_posix = { workspace = true }
elkodon_bb_container = { workspace = true }
