[package]
name = "example_event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example_event_listener"
path = "src/listener.rs"
[[bin]]
name = "example_event_notifier"
path = "src/notifier.rs"

[dependencies]
elkodon = { path = "../../elkodon/" }
elkodon_bb_posix = { path = "../../elkodon_bb/posix/" }
elkodon_bb_container = { path = "../../elkodon_bb/container/" }
