[package]
name = "example_event"
description = "Elkodon: example that demonstrates how events can be sent between processes"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }

[[example]]
name = "example_event_listener"
path = "src/listener.rs"
[[example]]
name = "example_event_notifier"
path = "src/notifier.rs"

[dependencies]
elkodon = { workspace = true }
elkodon_bb_posix = { workspace = true }
elkodon_bb_container = { workspace = true }
