[package]
name = "example_publish_subscribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "example_publish_subscribe_transmission_data"
path = "src/transmission_data.rs"
[[bin]]
name = "example_publish_subscribe_publisher"
path = "src/publisher.rs"
[[bin]]
name = "example_publish_subscribe_subscriber"
path = "src/subscriber.rs"

[dependencies]
elkodon = { path = "../../elkodon/" }
elkodon_bb_posix = { path = "../../elkodon_bb/posix/" }
elkodon_bb_container = { path = "../../elkodon_bb/container/" }

