[package]
name = "example_publish_subscribe"
description = "Elkodon: example that demonstrates a publish-subscribe messaging pattern between processes"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }

[lib]
name = "example_publish_subscribe_transmission_data"
path = "src/transmission_data.rs"
[[bin]]
name = "example_publish_subscribe_publisher"
path = "src/publisher.rs"
[[bin]]
name = "example_publish_subscribe_subscriber"
path = "src/subscriber.rs"

[dependencies]
elkodon = { workspace = true }
elkodon_bb_posix = { workspace = true }
elkodon_bb_container = { workspace = true }
